# CodeAtlas

./: .ruff.toml  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/sample_project/: app.py
examples/sample_project/pkg/: __init__.py  math_utils.py
src/codeatlas/: __init__.py  cli.py  graph.py  report.py  scanner.py  summarizer.py  utils.py
tests/: test_scanner.py
webapp/: app.py
